# shogi

./: .gitignore  pyproject.toml  test.py
