[project]
name = "poetry add requests"
version = "0.1.0"
description = ""
authors = [
    {name = "NAOYA\\bundl",email = "yakinoki"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
